prototype/k8s/noisy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noisy
  namespace: aswarm
spec:
  replicas: 30
  selector:
    matchLabels:
      app: noisy
  template:
    metadata:
      labels:
        app: noisy
    spec:
      containers:
      - name: sleeper
        image: busybox
        command: ["sh","-c","sleep 3600"]
        resources:
          requests:
            cpu: "5m"
            memory: "8Mi"
          limits:
            cpu: "20m"
            memory: "32Mi"
